[gd_scene load_steps=8 format=3 uid="uid://xnkycub4ih2c"]

[ext_resource type="PackedScene" uid="uid://c5fohp857jbyu" path="res://animatable/base_animatable_object.tscn" id="1_npld2"]
[ext_resource type="Script" path="res://animatable/FallingPlatform/falling_platform.gd" id="2_2inpv"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_miltr"]
load_path = "res://.godot/imported/platform.png-a6711e39134d85008e9a5f5c35692000.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40hin"]
size = Vector2(32, 6)

[sub_resource type="Animation" id="Animation_mo72l"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nohas"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ou7gd"]
_data = {
"RESET": SubResource("Animation_nohas"),
"shake": SubResource("Animation_mo72l")
}

[node name="FallingPlatform" node_paths=PackedStringArray("_respawn_timer", "_animation", "_texture") instance=ExtResource("1_npld2")]
script = ExtResource("2_2inpv")
_respawn_timer = NodePath("RespawnTimer")
_animation = NodePath("Animation")
_texture = NodePath("Sprite")
_reset_timer = 3.0

[node name="Sprite" parent="." index="0"]
texture = SubResource("CompressedTexture2D_miltr")

[node name="Collision" parent="." index="1"]
visible = false
shape = SubResource("RectangleShape2D_40hin")
one_way_collision = true

[node name="RespawnTimer" type="Timer" parent="." index="2"]

[node name="Animation" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_ou7gd")
}

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
